services/promo-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promo-service-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: promo-service
  template:
    metadata:
      labels:
        app: promo-service
    spec:
      containers:
        - name: cos-promo-service-test
          image: cos-promo-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
