services/promo-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promo-service-service
spec:
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: promo-service
