services/promo-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promo-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/promo-service
            pathType: "Prefix"
            backend:
              service:
                name: promo-service-service
                port:
                  number: 3003
