services/promo-service/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: promo-service-virtual
spec:
  hosts:
    - promo-service-service
  http:
    - route:
        - destination:
            host: promo-service-service
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
